# tiny_csg

./: CMakeLists.txt  csg.cpp  csg.hpp  csg_private.hpp  demo.cpp  demo_flythrough_camera.cpp  query_box.cpp  query_frustum.cpp  query_point.cpp  query_ray.cpp  readme.md  rebuild.cpp
3rdp/defer/: defer.hpp
3rdp/randomColor-cpp/: LICENSE  README.md  example.cpp  example.html
3rdp/shader_loader/: LICENSE  README.md  makefile
3rdp/shader_loader/include/: shader.hpp  shader_error.hpp  shader_program.hpp
3rdp/shader_loader/src/: shader.cpp  shader_program.cpp
